transitioning to MVC architecture

--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
 }
 
 h1{
-    color:darkgreen;
+    color:darkblue;
 }
 
 #B-bot{
-    height: 20rem;
-    width: 50%;
+    height: 100rem;
+    width: 70%;
 }
 
 img{
