--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>B-bot website</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="style.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"> </script>
         <script src="main.js"></script>
     </head>
@@ -24,12 +24,12 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <img src="B-bot_img.jpg" alt="o-bot_img">
+                    <img src="B-bot_img.jpg" alt="B-bot_img">
                 </div>
             </div>
             <div class="row-cols-sm-auto row" id="B-bot">
                 <div class="col">
-                    <!-- <iframe src="https://web.powerva.microsoft.com/environments/Default-a217cd4c-bf19-42bd-a303-270526a07d00/bots/cr0ad_wallE/webchat?__version__=2" frameborder="0" style="width: 100%; height: 100%;"></iframe> -->
+                    <iframe src="https://web.powerva.microsoft.com/environments/Default-a217cd4c-bf19-42bd-a303-270526a07d00/bots/cr0ad_wallE/webchat?__version__=2" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
