--- a/views/homeView.ejs
+++ b/views/homeView.ejs
@@ -1,15 +1,15 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head>               
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>B-bot website</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="style.css" rel="style.css">
+        <link  href="css/style.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"> </script>
-        <script src="main.js"></script>
+        <script src="client.js"></script>
     </head>
     <body>
         <div class="container">
@@ -18,6 +18,7 @@
                     <h1>B-bot website</h1>
                     <p>This website will be used to test for B-bot's chat bot</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi repudiandae aliquid dolores libero at minus tenetur cumque commodi fuga exercitationem rerum, unde et est quasi numquam atque neque deserunt beatae. </p>
+                    <p><%= text %></p>
                     <ul>
                         <li>verify email</li>
                         <li>authenticating user</li>
