added some APIs to receive email

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,12 +3,12 @@
 }
 
 h1{
-    color:red;
+    color:darkgreen;
 }
 
 #B-bot{
-    height: 100rem;
-    width: 70%;
+    height: 25em;
+    width: 85%;
 }
 
 img{
