--- a/views/homeView.ejs
+++ b/views/homeView.ejs
@@ -6,15 +6,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>B-bot website</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link  href="css/style.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="/css/style.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"> </script>
-        <script src="client.js"></script>
+        <script src="/js/client.js"></script>
     </head>
     <body>
+        <!-- clientId
+id: id
+: 
+"pva_wn4GoUh04p"
+"96ff4394-9197-43aa-b393-6a41652e21f8 -->
         <div class="container">
             <div class="row">
-                <div class="col-7">
+                <div class="col-7">    
                     <h1>B-bot website</h1>
                     <p>This website will be used to test for B-bot's chat bot</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi repudiandae aliquid dolores libero at minus tenetur cumque commodi fuga exercitationem rerum, unde et est quasi numquam atque neque deserunt beatae. </p>
@@ -28,9 +33,9 @@
                     <img src="B-bot_img.jpg" alt="B-bot_img">
                 </div>
             </div>
-            <div class="row-cols-sm-auto row" id="B-bot">
+            <div class="row-cols-sm-auto row">
                 <div class="col">
-                    <iframe src="https://web.powerva.microsoft.com/environments/Default-a217cd4c-bf19-42bd-a303-270526a07d00/bots/cr0ad_wallE/webchat?__version__=2" frameborder="0"></iframe>
+                    <iframe  id="B-bot" src="https://web.powerva.microsoft.com/environments/Default-a217cd4c-bf19-42bd-a303-270526a07d00/bots/cr0ad_wallE/webchat?__version__=2" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
