--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -7,7 +7,7 @@
     </head>
     <body>
         <!-- GET Request Form -->
-        <form method="GET" action="/check-email/{{email}}">
+        <form method="GET" action="/email/address:">
             <label for="email">Email:</label>
             <input type="text" id="email" name="email" required>
             <br>
