--- a/views/homeView.ejs
+++ b/views/homeView.ejs
@@ -9,7 +9,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link href="/css/style.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"> </script>
-        <script src="/js/client.js"></script>
     </head>
     <body>
         <div class="container">
@@ -32,15 +31,17 @@
             </div>
             <div class="row-cols-sm-auto row">
                 <div class="col">
-                    <!-- Add a button to refresh the chat bot -->
-                    <button id="refreshChatBot">Refresh Chat Bot</button>
-                    <iframe id="B-bot" src="https://web.powerva.microsoft.com/environments/Default-a217cd4c-bf19-42bd-a303-270526a07d00/bots/cr0ad_wallE/webchat?__version__=2" frameborder="0"></iframe>
+                    <!-- Add the chatbot button -->
+                    <button id="chatbotButton">Chat with WALL-E</button>
+                    <!-- Add the chatbot container -->
+                    <div id="chatbotContainer" style="display: none;">
+                      <!-- Include the chatbot webpage -->
+                        <iframe src="https://web.powerva.microsoft.com/environments/Default-a217cd4c-bf19-42bd-a303-270526a07d00/bots/cr0ad_wallE/webchat?__version__=2" style="width: 100%; height: 500px; border: none;"></iframe>
+                    
+                      </div>
                 </div>
             </div>
         </div>
+        <script src="/js/client.js"></script>
     </body>
 </html>
-
-
-<!-- id: "pva_jopUEClWPD"
-C2 User -->
