--- a/views/homeView.ejs
+++ b/views/homeView.ejs
@@ -36,7 +36,7 @@
                     <!-- Add the chatbot container -->
                     <div id="chatbotContainer" style="display: none;">
                       <!-- Include the chatbot webpage -->
-                        <iframe src="https://web.powerva.microsoft.com/environments/Default-a217cd4c-bf19-42bd-a303-270526a07d00/bots/cr0ad_wallE/webchat?__version__=2" style="width: 100%; height: 500px; border: none;"></iframe>
+                      <iframe src="https://web.powerva.microsoft.com/environments/Default-a217cd4c-bf19-42bd-a303-270526a07d00/bots/cr0ad_wallE/webchat?__version__=2" frameborder="0" style="width: 100%; height: 100%;"></iframe>
                     
                       </div>
                 </div>
