--- a/views/homeView.ejs
+++ b/views/homeView.ejs
@@ -34,11 +34,11 @@
                     <!-- Add the chatbot button -->
                     <button id="chatbotButton">Chat with WALL-E</button>
                     <!-- Add the chatbot container -->
-                    <div id="chatbotContainer" style="display: none;">
+                    <div id="chatbotContainer" style="display: none; height: 30em;">
                       <!-- Include the chatbot webpage -->
                       <iframe src="https://web.powerva.microsoft.com/environments/Default-a217cd4c-bf19-42bd-a303-270526a07d00/bots/cr0ad_wallE/webchat?__version__=2" frameborder="0" style="width: 100%; height: 100%;"></iframe>
                     
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
